--- a/search.html
+++ b/search.html
@@ -183,7 +183,7 @@
   <!-- room types section -->
   <section id="room-types" class=" text-dark">
     <div class="container">
-      <div class="room-type">
+      <div class="room-type py-2 text-center" >
         <h4 class="room-type-header">
           6 loại phòng và tổng cộng 11 lựa chọn
         </h4>
@@ -1057,6 +1057,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div>
+      <a href=""></a>
     </div>
   </section>
   <!-- sign up : enter email -->
