--- a/search_results.html
+++ b/search_results.html
@@ -86,10 +86,12 @@
         <input type="submit" class="btn  submit-btn" value="Tìm kiếm">
       </form>
       <p class="text-center text-logo py-3">
-        Có <span class="number-hotel-ok">
-          100
-        </span>
-        khách sạn vừa ý bạn
+        <a href="search.html">
+          Có <span class="number-hotel-ok">
+            100 khách sạn vừa ý bạn
+          </span>
+        </a>
+
       </p>
     </div>
   </div>
@@ -889,10 +891,10 @@
                       <i class="fas fa-star fa-2x"></i>
                       <i class="fas fa-star fa-2x"></i>
                       <i class="fas fa-star fa-2x"></i>
-                     
+
                     </span>
                   </div>
-                  
+
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
