--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="news.html" target="_blank"> Tin tức</a>
           </li>
           <li>
-            <a href="index.html" target="_blank"> Giới thiệu</a>
+            <a href="payment1.html" target="_blank"> Giới thiệu</a>
           </li>
           <li>
             <a href="news.html" target="_blank"> Liên hệ</a>
@@ -186,7 +186,7 @@
         </button>
       </div>
       <div class="list-next-hotels m-center my-6">
-        <a href="#" class="btn btn-info">Xem thêm <i class="fas fa-chevron-right"></i></a>
+        <a href="search_results.html" class="btn btn-info">Xem thêm <i class="fas fa-chevron-right"></i></a>
       </div>
 
     </div>
@@ -194,16 +194,16 @@
   </section>
   <!-- support automatic message -->
   <div id="support-customer-dialogue" class="text-center text-white py-1">
-      <a href="#top" class="go-top">
-        <i class="fas fa-arrow-up"></i>
-      </a>
-      <div class="dialogue">
-        <h4 class="py-0">19009876</h4>
-        <div class="message-dialogue">
-          <a href="#"><i class="far fa-comment-alt"></i> Bạn cần hỗ trợ?</a>
-        </div>
+    <a href="#top" class="go-top">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+    <div class="dialogue">
+      <h4 class="py-0">19009876</h4>
+      <div class="message-dialogue">
+        <a href="#"><i class="far fa-comment-alt"></i> Bạn cần hỗ trợ?</a>
       </div>
     </div>
+  </div>
   <!-- other locations -->
   <section id="other-locations" class=" py-4 text-center text-dark">
     <div class="container">
