--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@
       <i class="fas fa-chevron-left fa-3x"></i>
     </button>
   </div>
-  <!-- neww section content -->
+  <!-- news section content -->
   <section id="hot-news" class="py-3 text-center text-dark hot-news-a">
     <div class="container">
       <h2 class="py-3">TIN TỨC NỔI BẬT</h2>
@@ -95,7 +95,7 @@
           <div class="item">
             <img src="./img/bn_hotel.jpg" alt="" />
             <div class="item-link">
-              <a href="#">
+              <a href="news_detail1.html">
                 <h5 class="item-link-title">
                   Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
                   mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
@@ -109,7 +109,7 @@
           <div class="item">
             <img src="./img/family1.jpg" alt="" />
             <div class="item-link">
-              <a href="#">
+              <a href="news_detail1.html">
                 <h5 class="item-link-title">
                   Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
                   mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
@@ -123,7 +123,7 @@
           <div class="item">
             <img src="./img/ha_noi.jpg" alt="" />
             <div class="item-link">
-              <a href="#">
+              <a href="news_detail1.html">
                 <h5 class="item-link-title">
                   Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
                   mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
@@ -137,7 +137,7 @@
           <div class="item">
             <img src="./img/hcm_.jpg" alt="" />
             <div class="item-link">
-              <a href="#">
+              <a href="news_detail1.html">
                 <h5 class="item-link-title">
                   Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
                   mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
