--- a/news_detail1.html
+++ b/news_detail1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
-  
+
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
@@ -80,75 +80,79 @@
     <div class="container text-left text-dark">
       <div class="news">
         <div class="news-left destination-news news-1">
-            <h3 class="news-1-title text-medium">
-              Resort trên cây ở Mexico: Có cả trăm góc sống ảo "đẹp tung chảo" 
-              nhưng chỉ dành cho khách du lịch trên 18 tuổi
-            </h3>
-            <p class="news-1-date">
-              <i class="far fa-clock"></i> 6 giờ trước
+          <h3 class="news-1-title text-medium">
+            Resort trên cây ở Mexico: Có cả trăm góc sống ảo "đẹp tung chảo"
+            nhưng chỉ dành cho khách du lịch trên 18 tuổi
+          </h3>
+          <p class="news-1-date">
+            <i class="far fa-clock"></i> 6 giờ trước
+          </p>
+          <div class="social-share news-1-social-share-top py-2">
+            <a href="https://www.facebook.com" target="_blank" class="bg-info">
+              <i class="fab fa-facebook-f"></i>
+              </i>
+              Chia sẻ
+            </a>
+            <a href="google.com" target="_blank" class="bg-info bg-info-light text-white">
+              <i class="fas fa-thumbs-up"></i> Thích <span class="news-like-amount">20</span>
+            </a>
+            <a href="https://www.facebook.com" target="_blank" class="btn-outline">
+              <i class="fas fa-save"></i> Lưu lại tin này
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+              <i class="fas fa-envelope fa-3x">
+              </i>
+            </a>
+          </div>
+          <hr class="my-4">
+          <div class="news-1-content">
+            <div class="news-1-content-open text-small py-4">
+              Đã bao giờ bạn tưởng tượng ra rằng mình sẽ ngủ ở một nơi nằm trên cây, lại không có
+              wifi, đèn điện, điều hoà chưa? Nghe có vẻ kì lạ nhưng thực tế vẫn có không ít những
+              khu nghỉ dưỡng hay resort cao cấp không nằm dưới mặt đất như bình thường mà
+              lại lơ lửng giữa rừng cây xanh um.
+            </div>
+            <p class="news-1-content-body-top text-small py-2">
+              Mới đây, dân tình vừa phát hiện được một khu resort nằm trên cây ngay tại Mexico. Với không gian được
+              decor lạ mắt cùng
+              những dịch vụ trải nghiệm hấp dẫn. Đây chắc chắn là điểm đến trong mơ dành cho hội đam mê xê dịch.
             </p>
-            <div class="social-share news-1-social-share-top py-2">
-              <a href="https://www.facebook.com" target="_blank" class="bg-info">
-                <i class="fab fa-facebook-f"></i>
-                </i>
-                Chia sẻ
-              </a>
-              <a href="google.com" target="_blank" class="bg-info bg-info-light text-white">
-                <i class="fas fa-thumbs-up"></i> Thích <span class="news-like-amount">20</span>
-              </a>
-              <a href="https://www.facebook.com" target="_blank" class="btn-outline">
-                <i class="fas fa-save"></i> Lưu lại tin này
-              </a>
-              <a href="https://www.facebook.com" target="_blank" >
-                <i class="fas fa-envelope fa-3x">
-                </i>
-              </a>
+            <div class="news-1-img">
+              <img src="./img/hotel11.jpg" alt="">
+              <p class="source-img">Source : Instagram</p>
             </div>
-            <hr class="my-4">
-            <div class="news-1-content">
-              <div class="news-1-content-open text-small py-4">
-                Đã bao giờ bạn tưởng tượng ra rằng mình sẽ ngủ ở một nơi nằm trên cây, lại không có
-                wifi, đèn điện, điều hoà chưa? Nghe có vẻ kì lạ nhưng thực tế vẫn có không ít những
-                khu nghỉ dưỡng hay resort cao cấp không nằm dưới mặt đất như bình thường mà
-                lại lơ lửng giữa rừng cây xanh um.
-              </div>
-              <p class="news-1-content-body-top text-small py-2">
-                Mới đây, dân tình vừa phát hiện được một khu resort nằm trên cây ngay tại Mexico. Với không gian được decor lạ mắt cùng
-                những dịch vụ trải nghiệm hấp dẫn. Đây chắc chắn là điểm đến trong mơ dành cho hội đam mê xê dịch.
-              </p>
-              <div class="news-1-img">
-                <img src="./img/hotel11.jpg" alt="">
-                <p class="source-img">Source : Instagram</p>
-              </div>
-              <p class="news-1-content-body-bottom text-small py-2">
-                Mới đây, dân tình vừa phát hiện được một khu resort nằm trên cây ngay tại Mexico. Với không gian được decor lạ mắt
-                cùng
-                những dịch vụ trải nghiệm hấp dẫn. Đây chắc chắn là điểm đến trong mơ dành cho hội đam mê xê dịch.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus commodi laborum esse sed incidunt, architecto nulla fuga officiis quam iure!
-              </p>
-              <div class="news-1-img">
-                <img src="./img/hotel12.jpg" alt="">
-                <p class="source-img">Source : Facebook</p>
-              </div>
-              <p class="news-1-content-body-end py-4">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur officia repellat sapiente totam, sed delectus!
-              </p>
+            <p class="news-1-content-body-bottom text-small py-2">
+              Mới đây, dân tình vừa phát hiện được một khu resort nằm trên cây ngay tại Mexico. Với không gian được
+              decor lạ mắt
+              cùng
+              những dịch vụ trải nghiệm hấp dẫn. Đây chắc chắn là điểm đến trong mơ dành cho hội đam mê xê dịch.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus commodi laborum esse sed incidunt,
+              architecto nulla fuga officiis quam iure!
+            </p>
+            <div class="news-1-img">
+              <img src="./img/hotel12.jpg" alt="">
+              <p class="source-img">Source : Facebook</p>
             </div>
-            <div class="social-share news-1-social-share-bottom py-2">
-              <a href="https://www.facebook.com" target="_blank" class="bg-info">
-                <i class="fab fa-facebook-f"></i>
-                </i>
-                Chia sẻ
-              </a>
-              <a href="google.com" target="_blank" class="bg-info bg-info-light text-white">
-                <i class="fas fa-thumbs-up"></i> Thích <span class="news-like-amount">20</span>
-              </a>
-              <a href="https://www.facebook.com" target="_blank" class="btn-outline text-info">
-                <i class="fas fa-save"></i> Lưu lại tin này
-              </a>
+            <p class="news-1-content-body-end py-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur officia repellat sapiente totam, sed
+              delectus!
+            </p>
+          </div>
+          <div class="social-share news-1-social-share-bottom py-2">
+            <a href="https://www.facebook.com" target="_blank" class="bg-info">
+              <i class="fab fa-facebook-f"></i>
+              </i>
+              Chia sẻ
+            </a>
+            <a href="google.com" target="_blank" class="bg-info bg-info-light text-white">
+              <i class="fas fa-thumbs-up"></i> Thích <span class="news-like-amount">20</span>
+            </a>
+            <a href="https://www.facebook.com" target="_blank" class="btn-outline text-info">
+              <i class="fas fa-save"></i> Lưu lại tin này
+            </a>
 
-            </div>
+          </div>
         </div>
         <div class="news-right text-left">
           <div class="item">
