some other change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   <div class="main-banner">
     <img src="./img/main_banner.png" alt="Main advertise banner" />
     <button class="main-banner-next-right">
-      <i class="fas fa-chevron-right fa-3x"></i></button><button class="main-banner-next-left">
+      <i class="fas fa-chevron-right fa-3x"></i></button>
+      <button class="main-banner-next-left">
       <i class="fas fa-chevron-left fa-3x"></i>
     </button>
   </div>
