--- a/news.html
+++ b/news.html
@@ -83,7 +83,7 @@
           <a href="news_detail1.html">
             <img src="./img/mv_ha_giang.png" alt="" />
           </a>
-          <div class="news-text text-white">
+          <div class="news-text text-medium text-white">
             <h4>Review chuyến đi Hà Giang săn mùa vàng</h4>
             <p class="py-2">
               Nhắc đến mùa vàng Tây Bắc, người ta sẽ nghĩ ngay đến Hà Giang.
