--- a/news_detail1.html
+++ b/news_detail1.html
@@ -170,6 +170,118 @@
             </div>
           </div>
           <div class="item">
+            <img src="./img/bn_hotel.jpg" alt="" />
+            <div class="item-link">
+              <a href="news_detail1.html">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 6 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/bn_hotel.jpg" alt="" />
+            <div class="item-link">
+              <a href="news_detail1.html">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 6 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/bn_hotel.jpg" alt="" />
+            <div class="item-link">
+              <a href="news_detail1.html">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 6 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/bn_hotel.jpg" alt="" />
+            <div class="item-link">
+              <a href="news_detail1.html">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 6 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/family1.jpg" alt="" />
+            <div class="item-link">
+              <a href="#">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 5 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/family1.jpg" alt="" />
+            <div class="item-link">
+              <a href="#">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 5 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/family1.jpg" alt="" />
+            <div class="item-link">
+              <a href="#">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 5 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./img/family1.jpg" alt="" />
+            <div class="item-link">
+              <a href="#">
+                <h5 class="item-link-title">
+                  Xứ sở 4 mùa hoa là xưa rồi nhé, Mộc Châu nay là xứ sở của 12
+                  mùa hoa, mỗi tháng đều có vẻ đẹp riêng đến phát cuồng
+                </h5>
+              </a>
+              <p class="item-link-date">
+                <i class="far fa-clock"></i> 5 giờ trước
+              </p>
+            </div>
+          </div>
+          <div class="item">
             <img src="./img/family1.jpg" alt="" />
             <div class="item-link">
               <a href="#">
