--- a/payment1.html
+++ b/payment1.html
@@ -82,7 +82,7 @@
     </span>
   </div>
   <!-- payment section -->
-  <section id="payment" class="step-1">
+  <section id="payment" class="step-1-content">
     <div class="container pb-5">
       <main class="step-info step-1 bg-light-blue">
         <p class="text-medium my-3">
@@ -390,7 +390,7 @@
     </p>
   </footer>
 
-  <script src="./js/main.js"></script>
+  <!-- <script src="./js/main.js"></script> -->
 </body>
 
 </html>
