--- a/payment2.html
+++ b/payment2.html
@@ -67,26 +67,26 @@
       </div>
     </div>
   </header>
+  <div class="steps step-2">
+    <span class="step-number">
+      1
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number current-step">
+      2
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number">
+      <i class="fas fa-check"></i>
+    </span>
+  </div>
   <!-- payment section -->
-  <section id="payment">
-    <div class="steps step-2">
-      <span class="step-number">
-        1
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number current-step">
-        2
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number">
-        <i class="fas fa-check"></i>
-      </span>
-    </div>
+  <section id="payment" class="step-2-content">
     <div class="container pb-5">
       <main class="step-info step-2">
-        <div class="text-medium py-2">
+        <div class="text-small py-2">
           <span class="success-color"><i class="fas fa-lock"></i> Thanh toán an toàn</span>
-          <span class="text-small">Tất cả thông tin thẻ đều được mã hóa, được bảo vệ và đảm bảo an
+          <span class="text-extra-small">Tất cả thông tin thẻ đều được mã hóa, được bảo vệ và đảm bảo an
             toàn.</span>
         </div>
         <div class="pay">
