--- a/payment3.html
+++ b/payment3.html
@@ -67,31 +67,33 @@
       </div>
     </div>
   </header>
+  <!-- payment expression bars -->
+  <div class="steps step-3">
+    <span class="step-number">
+      1
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number">
+      2
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number  current-step">
+      <i class="fas fa-check"></i>
+    </span>
+  </div>
   <!-- payment section -->
-  <section id="payment">
-    <div class="steps step-3">
-      <span class="step-number">
-        1
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number">
-        2
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number  current-step">
-        <i class="fas fa-check"></i>
-      </span>
-    </div>
+  <section id="payment" class="section-3-content">
+
     <div class="container pb-5">
       <main class="step-info step-3">
         <div class="success-notification">
           <div class="icon-success">
-            <i class="fas fa-check fa-3x"></i>
+            <i class="fas fa-check"></i>
           </div>
-          <div class="success-message text-extra-large success-color">
+          <div class="success-message text-large success-color py-1">
             Thanh toán thành công
           </div>
-          <p class="py-2">
+          <p class="py-1">
             Cảm ơn Quý khách đã sử dụng dịch vụ của chúng tôi.
             Chúc quý khách có kì nghỉ vui vẻ
           </p>
