--- a/search.html
+++ b/search.html
@@ -728,7 +728,7 @@
       <div class="comments text-left my-4">
         <div class="comment">
           <div class="info-user py-2">
-            <p class="text-medium">
+            <p class="text-small">
               <span class="bg-success comment-rating">8.3</span> Quá Tuyệt
             </p>
             <ul class="mt-4">
@@ -749,7 +749,7 @@
         </div>
         <div class="comment">
           <div class="info-user py-2">
-            <p class="text-medium">
+            <p class="text-small">
               <span class="bg-success comment-rating">8.3</span> Quá Tuyệt
             </p>
             <ul class="mt-4">
@@ -770,7 +770,7 @@
         </div>
         <div class="comment">
           <div class="info-user py-2">
-            <p class="text-medium">
+            <p class="text-small">
               <span class="bg-success comment-rating">9.3</span> Wow
             </p>
             <ul class="mt-4">
@@ -791,7 +791,7 @@
         </div>
         <div class="comment">
           <div class="info-user py-2">
-            <p class="text-medium">
+            <p class="text-small">
               <span class="bg-success comment-rating">6.3</span> Tuyệt vời
             </p>
             <ul class="mt-4">
@@ -820,7 +820,7 @@
     <hr>
   </section>
   <div class="hotel-map text-center my-5">
-    <h1>Map to hotel</h1>
+    <h1 class="text-medium">Map to hotel</h1>
   </div>
   <!-- section other hotels -->
   <section id="other-hotels" class="my-5 text-dark">
