--- a/search_results.html
+++ b/search_results.html
@@ -415,7 +415,7 @@
         <div class="hotel-map">
         </div>
         <div class="list-aside-hotel">
-          <div class="items">
+          <div class="items" id="aside-ads">
             <div class="item">
               <a href="#" class="hotel-link">
                 <img src="./img/hotel_sm1.jpg" alt="">
@@ -713,16 +713,16 @@
                       <span class="number-people-evaluate">502</span> nhận xét
                     </p>
                   </div>
-
                 </div>
                 <div class="item-price">
-                  <h5 class="bg-red d-inline-block py-2">Giảm <span class="endow-percent">75%</span> </h5>
+                  <h5 class="bg-red d-inline-block py-2">Giảm <span class="endow-percent">
+                      75%</span> </h5>
                   <p class="my-2">Giá mỗi đêm từ</p>
                   <h5 class="price text-light" style="text-decoration: line-through;">
                     2.308.475đ
                   </h5>
-                  <hp class="text-danger text-medium">658.15đ</p>
-                    <a href="#" class="success-color text-extra-small">Huỷ miễn phí</a>
+                  <p class="text-danger text-medium">658.15đ</p>
+                  <a href="#" class="success-color text-extra-small">Huỷ miễn phí</a>
                 </div>
               </div>
             </div>
