--- a/news_detail1.html
+++ b/news_detail1.html
@@ -71,7 +71,8 @@
   <div class="main-banner">
     <img src="./img/main_banner.png" alt="Main advertise banner" />
     <button class="main-banner-next-right">
-      <i class="fas fa-chevron-right fa-3x"></i></button><button class="main-banner-next-left">
+      <i class="fas fa-chevron-right fa-3x"></i></button>
+      <button class="main-banner-next-left">
       <i class="fas fa-chevron-left fa-3x"></i>
     </button>
   </div>
@@ -106,12 +107,12 @@
           </div>
           <hr class="my-4">
           <div class="news-1-content">
-            <div class="news-1-content-open text-small py-4">
+            <p class="news-1-content-open text-small py-4">
               Đã bao giờ bạn tưởng tượng ra rằng mình sẽ ngủ ở một nơi nằm trên cây, lại không có
               wifi, đèn điện, điều hoà chưa? Nghe có vẻ kì lạ nhưng thực tế vẫn có không ít những
               khu nghỉ dưỡng hay resort cao cấp không nằm dưới mặt đất như bình thường mà
               lại lơ lửng giữa rừng cây xanh um.
-            </div>
+            </p>
             <p class="news-1-content-body-top text-small py-2">
               Mới đây, dân tình vừa phát hiện được một khu resort nằm trên cây ngay tại Mexico. Với không gian được
               decor lạ mắt cùng
