change email box

--- a/news_detail1.html
+++ b/news_detail1.html
@@ -432,7 +432,7 @@
   <section id="sign-up" class="bg-dark my-5">
     <div class="container py-1">
       <form action="" method="POST" class="py-2">
-        <input type="email" name="email" id="" placeholder="Enter email" />
+        <input type="email" name="email" id="" placeholder="Email or phone number" />
         <input type="submit" class="btn btn-light" value="Đăng Ký" />
       </form>
       <div class="text-info">
