--- a/payment3.html
+++ b/payment3.html
@@ -1,274 +1,295 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
+		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="stylesheet" href="./css/tablets.css" />
+		<link rel="stylesheet" href="./css/mobile.css" />
+		<link rel="stylesheet" href="./css/landing_page.css" />
+		<link rel="stylesheet" href="./css/ipad.css" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
+			integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	</head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./css/tablets.css" />
-  <link rel="stylesheet" href="./css/mobile.css">
-  <link rel="stylesheet" href="./css/landing_page.css">
-  <link rel="stylesheet" href="./css/ipad.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
-    integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-</head>
+	<body>
+		<header id="header">
+			<div class="header-container">
+				<nav class="main-nav" class="py-1">
+					<div class="main-logo-box">
+						<a
+							class="main-nav-logo text-logo"
+							href="index.html"
+							id="logo"
+							target="_blank"
+						>
+							<i class="fas fa-layer-group"> </i> MANDALA INN
+						</a>
+					</div>
+					<ul class="nav-bar">
+						<li>
+							<a href="index.html" class="current" target="_blank">
+								Trang chủ</a
+							>
+						</li>
+						<li>
+							<a href="endow_details.html" target="_blank"> Khuyến mại</a>
+						</li>
+						<li>
+							<a href="news.html" target="_blank"> Tin tức</a>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"> Giới thiệu</a>
+						</li>
+						<li>
+							<a href="news.html" target="_blank"> Liên hệ</a>
+						</li>
+						<li>
+							<a href="index.html" target="_blank">
+								<i class="fas fa-globe-americas"></i>
+								<i class="fas fa-sort-down"></i> Vietnamese
+							</a>
+							<ul class="sub-language">
+								<li><a href="#"></a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"
+								><i class="fas fa-user"></i> Đăng nhập</a
+							>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"
+								><i class="fas fa-user-plus"></i> Đăng ký</a
+							>
+						</li>
+					</ul>
+				</nav>
+				<div class="show-bars d-hidden">
+					<div class="show-bar show-bar-1"></div>
+					<div class="show-bar show-bar-2"></div>
+					<div class="show-bar show-bar-3"></div>
+				</div>
+			</div>
+		</header>
+		<!-- payment expression bars -->
+		<div class="steps step-3">
+			<span class="step-number">
+				1
+			</span>
+			<span class="thin-bar"></span>
+			<span class="step-number">
+				2
+			</span>
+			<span class="thin-bar"></span>
+			<span class="step-number  current-step">
+				<i class="fas fa-check"></i>
+			</span>
+		</div>
+		<!-- payment section -->
+		<section id="payment" class="section-3-content">
+			<div class="container pb-5">
+				<main class="step-info step-3">
+					<div class="success-notification">
+						<div class="icon-success">
+							<i class="fas fa-check"></i>
+						</div>
+						<div class="success-message text-large success-color py-1">
+							Thanh toán thành công
+						</div>
+						<p class="py-1">
+							Cảm ơn Quý khách đã sử dụng dịch vụ của chúng tôi. Chúc quý khách
+							có kì nghỉ vui vẻ
+						</p>
+						<a href="index.html" class="btn my-5 d-inline-block"
+							>Xem chi tiết giao dịch</a
+						>
+					</div>
+				</main>
+				<aside class="hotel-info-choosed text-left">
+					<div class="card">
+						<a href="#"><img src="./img/bed5.jpg" alt=""/></a>
+						<div class="hotel-infos">
+							<h5 class="hotel-name py-0 text-medium ">
+								Hotel Dela Couple Sapa
+							</h5>
+							<p class="hotel-location">
+								<i class="fas fa-map-marker-alt py-0 text-small"></i> Hoang Lien
+								Son Str, Sapa, Lao Cai
+							</p>
+							<p class="hotel-rating">
+								<span class="hotel-star-number"
+									>4 <i class="fas fa-star"></i
+								></span>
+								<span class="hotel-feedback-numbers">100</span> (Đánh giá)
+								<span class="hotel-rating-type text-danger">Rất tốt</span>
+							</p>
+							<hr class="my-3" />
+						</div>
 
-<body>
-  <header id="header">
-    <div class="header-container">
-      <nav class="main-nav" class="py-1">
-        <div class="main-logo-box">
-          <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
-            <i class="fas fa-layer-group">
-            </i> MANDALA INN
-          </a>
-        </div>
-        <ul class="nav-bar">
-          <li>
-            <a href="index.html" class="current" target="_blank"> Trang chủ</a>
-          </li>
-          <li>
-            <a href="endow_details.html" target="_blank"> Khuyến mại</a>
-          </li>
-          <li>
-            <a href="news.html" target="_blank"> Tin tức</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"> Giới thiệu</a>
-          </li>
-          <li>
-            <a href="news.html" target="_blank"> Liên hệ</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank">
-              <i class="fas fa-globe-americas"></i>
-              <i class="fas fa-sort-down"></i> Vietnamese
-            </a>
-            <ul class="sub-language">
-              <li><a href="#"></a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"><i class="fas fa-user"></i> Đăng nhập</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"><i class="fas fa-user-plus"></i> Đăng ký</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="show-bars d-hidden">
-        <div class="show-bar show-bar-1"></div>
-        <div class="show-bar show-bar-2"></div>
-        <div class="show-bar show-bar-3"></div>
-      </div>
-    </div>
-  </header>
-  <!-- payment expression bars -->
-  <div class="steps step-3">
-    <span class="step-number">
-      1
-    </span>
-    <span class="thin-bar"></span>
-    <span class="step-number">
-      2
-    </span>
-    <span class="thin-bar"></span>
-    <span class="step-number  current-step">
-      <i class="fas fa-check"></i>
-    </span>
-  </div>
-  <!-- payment section -->
-  <section id="payment" class="section-3-content">
+						<div class="room-details">
+							<p class="text-medium">
+								26 thg 2 2020 - 27 thg 2 2020 (1 đêm)
+							</p>
+							<p class="text-small mt-1">
+								2 người/ phòng/ 6 giường - Nam & Nữ
+							</p>
+							<p class="my-1">
+								<i class="fas fa-users"> 1 Phòng , 2 người lớn </i>
+							</p>
+							<p class="my-1">
+								<i class="fas fa-user"> 1 Phòng , 1 người lớn </i>
+							</p>
+						</div>
+					</div>
+				</aside>
+			</div>
+		</section>
 
-    <div class="container pb-5">
-      <main class="step-info step-3">
-        <div class="success-notification">
-          <div class="icon-success">
-            <i class="fas fa-check"></i>
-          </div>
-          <div class="success-message text-large success-color py-1">
-            Thanh toán thành công
-          </div>
-          <p class="py-1">
-            Cảm ơn Quý khách đã sử dụng dịch vụ của chúng tôi.
-            Chúc quý khách có kì nghỉ vui vẻ
-          </p>
-          <a href="index.html" class="btn my-5 d-inline-block">Xem chi tiết giao dịch</a>
-        </div>
+		<!-- sign up : enter email -->
+		<section id="sign-up" class="bg-dark my-5">
+			<div class="container py-1">
+				<form action="" method="POST" class="py-2">
+					<input
+						type="email"
+						name="email"
+						id=""
+						placeholder="Email or phone number"
+					/>
+					<input type="submit" class="btn btn-light" value="Đăng Ký" />
+				</form>
+				<div class="text-info">
+					<h4>
+						<i class="fas fa-envelope-open-text"></i> Các deal giảm giá đến 60%
+						sẽ được gửi đến inbox của bạn
+					</h4>
+					<p class="py-0">
+						Khi nhấp vào Đăng ký, bạn đồng ý với các Điều Khoản & Điều Kiện và
+						Chính Sách Bảo Mật của chúng tôi
+					</p>
+				</div>
+			</div>
+		</section>
 
-      </main>
-      <aside class="hotel-info-choosed text-left">
-        <div class="card">
-          <a href="#"><img src="./img/bed5.jpg" alt="" /></a>
-          <div class="hotel-infos">
-            <h5 class="hotel-name py-0 text-medium ">
-              Hotel Dela Couple Sapa
-            </h5>
-            <p class="hotel-location">
-              <i class="fas fa-map-marker-alt py-0 text-small"></i> Hoang Lien
-              Son Str, Sapa, Lao Cai
-            </p>
-            <p class="hotel-rating">
-              <span class="hotel-star-number">4 <i class="fas fa-star"></i></span>
-              <span class="hotel-feedback-numbers">100</span> (Đánh giá)
-              <span class="hotel-rating-type text-danger">Rất tốt</span>
-            </p>
-            <hr class="my-3" />
-          </div>
+		<footer id="footer" class="py-5 text-white">
+			<div class="group-items">
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo"
+									><i class="fas fa-layer-group"></i> MANDALA INN</a
+								>
+							</h5>
+						</li>
+						<li>
+							<p href="#">
+								Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
+							</p>
+						</li>
+						<li>
+							<a href="#">Tel: (84-4) 3555.8999</a>
+						</li>
+						<li>
+							<a href="#">Email: contact@idji.vn</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo">Về MANDALA INN</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Về chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Hợp tác cùng chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐỐI TÁC</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Đối tác thanh toán </a>
+						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
+						</li>
+						<li>
+							<a href="#">Chính sách bảo mật </a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-apps">
+							<a href="#"><i class="fas fa-qrcode"></i></a>
+							<a href="#"><i class="fab fa-apple"></i></a>
+							<a href="#"><i class="fab fa-google-play"></i></a>
+						</li>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">Kết nối với chúng tôi</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-socials">
+							<a href="#"><i class="fab fa-facebook"></i> </a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"> <i class="fab fa-twitter"></i></a>
+							<a href="#"> <i class="far fa-envelope"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<p class="copy-right text-center my-1">
+				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
+			</p>
+		</footer>
 
-          <div class="room-details">
-            <p class="text-medium">
-              26 thg 2 2020 - 27 thg 2 2020 (1 đêm)
-            </p>
-            <p class="text-small mt-1">
-              2 người/ phòng/ 6 giường - Nam & Nữ
-            </p>
-            <p class="my-1">
-              <i class="fas fa-users"> 1 Phòng , 2 người lớn </i>
-            </p>
-            <p class="my-1">
-              <i class="fas fa-user"> 1 Phòng , 1 người lớn </i>
-            </p>
-
-
-
-
-
-          </div>
-        </div>
-      </aside>
-    </div>
-  </section>
-
-  <!-- sign up : enter email -->
-  <section id="sign-up" class="bg-dark my-5">
-    <div class="container py-1">
-      <form action="" method="POST" class="py-2">
-        <input type="email" name="email" id="" placeholder="Enter email" />
-        <input type="submit" class="btn btn-light" value="Đăng Ký" />
-      </form>
-      <div class="text-info">
-        <h4>
-          <i class="fas fa-envelope-open-text"></i> Các deal giảm giá đến 60%
-          sẽ được gửi đến inbox của bạn
-        </h4>
-        <p class="py-0">
-          Khi nhấp vào Đăng ký, bạn đồng ý với các Điều Khoản & Điều Kiện và
-          Chính Sách Bảo Mật của chúng tôi
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <footer id="footer" class="py-5 text-white">
-    <div class="group-items">
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo"><i class="fas fa-layer-group"></i> MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <p href="#">
-              Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
-            </p>
-          </li>
-          <li>
-            <a href="#">Tel: (84-4) 3555.8999</a>
-          </li>
-          <li>
-            <a href="#">Email: contact@idji.vn</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo">Về MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Về chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Hợp tác cùng chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Cơ hội nghề nghiệp</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐỐI TÁC</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Đối tác thanh toán </a>
-          </li>
-          <li>
-            <a href="#">Chương trình đại lý</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Điều khoản sử dụng </a>
-          </li>
-          <li>
-            <a href="#">Quyền riêng tư </a>
-          </li>
-          <li>
-            <a href="#">Chính sách bảo mật </a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-apps">
-            <a href="#"><i class="fas fa-qrcode"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
-            <a href="#"><i class="fab fa-google-play"></i></a>
-          </li>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">Kết nối với chúng tôi</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-socials">
-            <a href="#"><i class="fab fa-facebook"></i> </a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"> <i class="fab fa-twitter"></i></a>
-            <a href="#"> <i class="far fa-envelope"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <p class="copy-right text-center my-1">
-      Copyright &copy; 2020 by Mandalla.vn . All rights reserved
-    </p>
-  </footer>
-
-  <script src="./js/main.js"></script>
-</body>
-
+		<script src="./js/main.js"></script>
+	</body>
 </html>
