change dialogue chat

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
           <i class="fas fa-chevron-left fa-3x"></i>
         </button>
       </div>
-      <div class="list-next-hotels m-center my-6">
+      <!-- <div class="list-next-hotels m-center my-6">
         <a href="search_results.html" class="btn btn-info">Xem thêm <i class="fas fa-chevron-right"></i></a>
-      </div>
+      </div> -->
 
     </div>
 
