--- a/endow_details.html
+++ b/endow_details.html
@@ -1,133 +1,157 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
+		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="stylesheet" href="./css/tablets.css" />
+		<link rel="stylesheet" href="./css/mobile.css" />
+		<link rel="stylesheet" href="./css/landing_page.css" />
+		<link rel="stylesheet" href="./css/ipad.css" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
+			integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	</head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./css/tablets.css" />
-  <link rel="stylesheet" href="./css/mobile.css">
-  <link rel="stylesheet" href="./css/landing_page.css">
-  <link rel="stylesheet" href="./css/ipad.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
-    integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-</head>
+	<body>
+		<header id="header">
+			<div class="header-container">
+				<nav class="main-nav" class="py-1">
+					<div class="main-logo-box">
+						<a
+							class="main-nav-logo text-logo"
+							href="index.html"
+							id="logo"
+							target="_blank"
+						>
+							<i class="fas fa-layer-group"> </i> MANDALA INN
+						</a>
+					</div>
+					<ul class="nav-bar">
+						<li>
+							<a href="index.html" class="current" target="_blank">
+								Trang chủ</a
+							>
+						</li>
+						<li>
+							<a href="endow_details.html" target="_blank"> Khuyến mại</a>
+						</li>
+						<li>
+							<a href="news.html" target="_blank"> Tin tức</a>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"> Giới thiệu</a>
+						</li>
+						<li>
+							<a href="news.html" target="_blank"> Liên hệ</a>
+						</li>
+						<li>
+							<a href="index.html" target="_blank">
+								<i class="fas fa-globe-americas"></i>
+								<i class="fas fa-sort-down"></i> Vietnamese
+							</a>
+							<ul class="sub-language">
+								<li><a href="#"></a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"
+								><i class="fas fa-user"></i> Đăng nhập</a
+							>
+						</li>
+						<li>
+							<a href="index.html" target="_blank"
+								><i class="fas fa-user-plus"></i> Đăng ký</a
+							>
+						</li>
+					</ul>
+				</nav>
+				<div class="show-bars d-hidden">
+					<div class="show-bar show-bar-1"></div>
+					<div class="show-bar show-bar-2"></div>
+					<div class="show-bar show-bar-3"></div>
+				</div>
+			</div>
+		</header>
+		<!-- main banner -->
+		<div class="main-banner">
+			<img src="./img/main_banner.png" alt="Main advertise banner" />
+			<button class="main-banner-next-right">
+				<i class="fas fa-chevron-right fa-3x"></i>
+			</button>
+			<button class="main-banner-next-left">
+				<i class="fas fa-chevron-left fa-3x"></i>
+			</button>
+		</div>
 
-<body>
-  <header id="header">
-    <div class="header-container">
-      <nav class="main-nav" class="py-1">
-        <div class="main-logo-box">
-          <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
-            <i class="fas fa-layer-group">
-            </i> MANDALA INN
-          </a>
-        </div>
-        <ul class="nav-bar">
-          <li>
-            <a href="index.html" class="current" target="_blank"> Trang chủ</a>
-          </li>
-          <li>
-            <a href="endow_details.html" target="_blank"> Khuyến mại</a>
-          </li>
-          <li>
-            <a href="news.html" target="_blank"> Tin tức</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"> Giới thiệu</a>
-          </li>
-          <li>
-            <a href="news.html" target="_blank"> Liên hệ</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank">
-              <i class="fas fa-globe-americas"></i>
-              <i class="fas fa-sort-down"></i> Vietnamese
-            </a>
-            <ul class="sub-language">
-              <li><a href="#"></a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"><i class="fas fa-user"></i> Đăng nhập</a>
-          </li>
-          <li>
-            <a href="index.html" target="_blank"><i class="fas fa-user-plus"></i> Đăng ký</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="show-bars d-hidden">
-        <div class="show-bar show-bar-1"></div>
-        <div class="show-bar show-bar-2"></div>
-        <div class="show-bar show-bar-3"></div>
-      </div>
-    </div>
-  </header>
-  <!-- main banner -->
-  <div class="main-banner">
-    <img src="./img/main_banner.png" alt="Main advertise banner" />
-    <button class="main-banner-next-right">
-      <i class="fas fa-chevron-right fa-3x"></i>
-    </button>
-    <button class="main-banner-next-left">
-      <i class="fas fa-chevron-left fa-3x"></i>
-    </button>
-  </div>
+		<!-- endow details section -->
+		<section id="endow-details">
+			<div class="container text-center">
+				<div class="endow-details-top">
+					<h1 class="text-large logo-color">
+						<i class="fas fa-crown"></i> Thứ Sáu TPBank tặng ưu đãi 5 sao!
+						<i class="fas fa-crown"></i>
+					</h1>
+					<p>
+						🥂 Đâu cần là "sao" mới nghỉ dưỡng tại khách sạn 5 sao!
+					</p>
+					<p>
+						Có ưu đãi TPBank để nhẹ phần chi phí rồi, tận hưởng thôi!
+					</p>
+					<p>
+						🏩 Mã TPBEST: Giảm ngay 1 triệu VND giá phòng cho giao dịch tối
+						thiểu 2 triệu VND/đêm.
+					</p>
+					<p>
+						🎊Áp dụng khi đặt phòng từ 2 đêm tại tất cả khách sạn 4 - 5 sao toàn
+						thế giới.
+					</p>
+					<p>
+						🌡️ Số lượng có hạn.
+					</p>
+					<p>
+						<a href="#" class="text-info">📲 Mở app đặt ngay! 📲</a>
+					</p>
+				</div>
+				<div class="endow-code-box">
+					<p class="text-large">
+						Ưu đãi khách sạn
+					</p>
+					<form action="" class="py-2">
+						<p class="box-code-input my-4">
+							<i class="fas fa-cut"></i>
+							<input type="text" name="" id="" placeholder="Mã khuyến mại" />
+						</p>
+						<input
+							type="submit"
+							value="Gửi mã"
+							class="btn d-inline-block btn-outline"
+						/>
+					</form>
+					<p class="text-extra-small">
+						Mã ưu đãi chỉ áp dụng khi thực hiện tại ứng dụng
+					</p>
+				</div>
+				<a href="all_endows.html" class="btn-outline">
+					Xem tất cả khuyến mại <i class="fas fa-chevron-right"></i>
+				</a>
+			</div>
+		</section>
 
-  <!-- endow details section -->
-  <section id="endow-details">
-    <div class="container text-center">
-      <div class="endow-details-top">
-        <h1 class="text-large logo-color">
-          <i class="fas fa-crown"></i> Thứ Sáu TPBank tặng ưu đãi 5 sao! <i class="fas fa-crown"></i>
-        </h1>
-        <p>
-          🥂 Đâu cần là "sao" mới nghỉ dưỡng tại khách sạn 5 sao!
-        </p>
-        <p>
-          Có ưu đãi TPBank để nhẹ phần chi phí rồi, tận hưởng thôi!
-        </p>
-        <p>
-          🏩 Mã TPBEST: Giảm ngay 1 triệu VND giá phòng cho giao dịch tối thiểu 2 triệu VND/đêm.
-        </p>
-        <p>
-          🎊Áp dụng khi đặt phòng từ 2 đêm tại tất cả khách sạn 4 - 5 sao toàn thế giới.
-
-        </p>
-        <p>
-          🌡️ Số lượng có hạn.
-        </p>
-        <p>
-          <a href="#" class="text-info">📲 Mở app đặt ngay! 📲</a>
-        </p>
-      </div>
-      <div class="endow-code-box">
-        <p class="text-large">
-          Ưu đãi khách sạn
-        </p>
-        <form action="" class="py-2">
-          <p class="box-code-input my-4">
-            <i class="fas fa-cut"></i>
-            <input type="text" name="" id="" placeholder="Mã khuyến mại">
-          </p>
-          <input type="submit" value="Gửi mã" class="btn d-inline-block btn-outline">
-        </form>
-        <p class="text-extra-small">
-          Mã ưu đãi chỉ áp dụng khi thực hiện tại ứng dụng
-        </p>
-      </div>
-      <a href="all_endows.html" class="btn-outline">
-        Xem tất cả khuyến mại <i class="fas fa-chevron-right"></i>
-      </a>
-    </div>
-  </section>
-
-  <!-- support automatic message -->
-  <!-- <div id="support-customer-dialogue" class="text-center text-white bg-primary py-5">
+		<!-- support automatic message -->
+		<!-- <div id="support-customer-dialogue" class="text-center text-white bg-primary py-5">
       <a href="#top" class="go-top">
         <i class="fas fa-arrow-up"></i>
       </a>
@@ -140,133 +164,139 @@
         </div>
       </div>
     </div> -->
-  <!-- other locations -->
+		<!-- other locations -->
 
-  <!-- sign up : enter email -->
-  <section id="sign-up" class="bg-dark my-5">
-    <div class="container py-1">
-      <form action="" method="POST" class="py-2">
-        <input type="email" name="email" id="" placeholder="Email or phone number" />
-        <input type="submit" class="btn btn-light" value="Đăng Ký" />
-      </form>
-      <div class="text-info">
-        <h4>
-          <i class="fas fa-envelope-open-text"></i> Các deal giảm giá đến 60%
-          sẽ được gửi đến inbox của bạn
-        </h4>
-        <p class="py-0">
-          Khi nhấp vào Đăng ký, bạn đồng ý với các Điều Khoản & Điều Kiện và
-          Chính Sách Bảo Mật của chúng tôi
-        </p>
-      </div>
-    </div>
-  </section>
+		<!-- sign up : enter email -->
+		<section id="sign-up" class="bg-dark my-5">
+			<div class="container py-1">
+				<form action="" method="POST" class="py-2">
+					<input
+						type="email"
+						name="email"
+						id=""
+						placeholder="Email or phone number"
+					/>
+					<input type="submit" class="btn btn-light" value="Đăng Ký" />
+				</form>
+				<div class="text-info">
+					<h4>
+						<i class="fas fa-envelope-open-text"></i> Các deal giảm giá đến 60%
+						sẽ được gửi đến inbox của bạn
+					</h4>
+					<p class="py-0">
+						Khi nhấp vào Đăng ký, bạn đồng ý với các Điều Khoản & Điều Kiện và
+						Chính Sách Bảo Mật của chúng tôi
+					</p>
+				</div>
+			</div>
+		</section>
 
-  <footer id="footer" class="py-5 text-white">
-    <div class="group-items">
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo"><i class="fas fa-layer-group"></i> MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <p href="#">
-              Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
-            </p>
-          </li>
-          <li>
-            <a href="#">Tel: (84-4) 3555.8999</a>
-          </li>
-          <li>
-            <a href="#">Email: contact@idji.vn</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo">Về MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Về chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Hợp tác cùng chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Cơ hội nghề nghiệp</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐỐI TÁC</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Đối tác thanh toán </a>
-          </li>
-          <li>
-            <a href="#">Chương trình đại lý</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Điều khoản sử dụng </a>
-          </li>
-          <li>
-            <a href="#">Quyền riêng tư </a>
-          </li>
-          <li>
-            <a href="#">Chính sách bảo mật </a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-apps">
-            <a href="#"><i class="fas fa-qrcode"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
-            <a href="#"><i class="fab fa-google-play"></i></a>
-          </li>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">Kết nối với chúng tôi</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-socials">
-            <a href="#"><i class="fab fa-facebook"></i> </a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"> <i class="fab fa-twitter"></i></a>
-            <a href="#"> <i class="far fa-envelope"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <p class="copy-right text-center my-1">
-      Copyright &copy; 2020 by Mandalla.vn . All rights reserved
-    </p>
-  </footer>
+		<footer id="footer" class="py-5 text-white">
+			<div class="group-items">
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo"
+									><i class="fas fa-layer-group"></i> MANDALA INN</a
+								>
+							</h5>
+						</li>
+						<li>
+							<p href="#">
+								Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
+							</p>
+						</li>
+						<li>
+							<a href="#">Tel: (84-4) 3555.8999</a>
+						</li>
+						<li>
+							<a href="#">Email: contact@idji.vn</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo">Về MANDALA INN</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Về chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Hợp tác cùng chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐỐI TÁC</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Đối tác thanh toán </a>
+						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
+						</li>
+						<li>
+							<a href="#">Chính sách bảo mật </a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-apps">
+							<a href="#"><i class="fas fa-qrcode"></i></a>
+							<a href="#"><i class="fab fa-apple"></i></a>
+							<a href="#"><i class="fab fa-google-play"></i></a>
+						</li>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">Kết nối với chúng tôi</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-socials">
+							<a href="#"><i class="fab fa-facebook"></i> </a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"> <i class="fab fa-twitter"></i></a>
+							<a href="#"> <i class="far fa-envelope"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<p class="copy-right text-center my-1">
+				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
+			</p>
+		</footer>
 
-  <script src="./js/main.js"></script>
-</body>
-
+		<script src="./js/main.js"></script>
+	</body>
 </html>
