--- a/news.html
+++ b/news.html
@@ -100,7 +100,7 @@
 				<div class="news">
 					<div class="news-left">
 						<a href="news_detail1.html">
-							<img src="./img/mv_ha_giang.png" alt="" />
+							<img src="./img/hcm_.jpg" alt="" />
 						</a>
 						<div class="news-text text-medium text-white">
 							<h4>Review chuyến đi Hà Giang săn mùa vàng</h4>
