change footer and add sing up page

--- a/all_endows.html
+++ b/all_endows.html
@@ -238,8 +238,8 @@
 				</div>
 			</div>
 		</section>
-
-		<footer id="footer" class="py-5 text-white">
+		<!-- footer -->
+		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
 					<ul>
@@ -279,6 +279,9 @@
 						<li>
 							<a href="#">Cơ hội nghề nghiệp</a>
 						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -294,6 +297,12 @@
 						<li>
 							<a href="#">Chương trình đại lý</a>
 						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -305,6 +314,9 @@
 						</li>
 						<li>
 							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
 						</li>
 						<li>
 							<a href="#">Quyền riêng tư </a>
@@ -340,11 +352,10 @@
 					</ul>
 				</div>
 			</div>
-			<p class="copy-right text-center my-1">
+			<p class="copy-right text-center my-4">
 				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
 			</p>
 		</footer>
-
 		<script src="./js/main.js"></script>
 	</body>
 </html>
