--- a/news.html
+++ b/news.html
@@ -299,7 +299,8 @@
 			</div>
 		</section>
 
-		<footer id="footer" class="py-5 text-white">
+	<!-- footer -->
+		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
 					<ul>
@@ -339,6 +340,9 @@
 						<li>
 							<a href="#">Cơ hội nghề nghiệp</a>
 						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -354,6 +358,12 @@
 						<li>
 							<a href="#">Chương trình đại lý</a>
 						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -365,6 +375,9 @@
 						</li>
 						<li>
 							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
 						</li>
 						<li>
 							<a href="#">Quyền riêng tư </a>
@@ -400,11 +413,10 @@
 					</ul>
 				</div>
 			</div>
-			<p class="copy-right text-center my-1">
+			<p class="copy-right text-center my-4">
 				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
 			</p>
 		</footer>
-
 		<script src="./js/main.js"></script>
 	</body>
 </html>
