--- a/payment3.html
+++ b/payment3.html
@@ -72,7 +72,7 @@
 							>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"
+							<a href="signup.html" target="_blank"
 								><i class="fas fa-user-plus"></i> Đăng ký</a
 							>
 						</li>
@@ -105,7 +105,7 @@
 				<main class="step-info step-3">
 					<div class="success-notification">
 						<div class="icon-success">
-							<i class="fas fa-check"></i>
+							<i class="fas fa-check fa-2x"></i>
 						</div>
 						<div class="success-message text-large success-color py-1">
 							Thanh toán thành công
@@ -184,7 +184,8 @@
 			</div>
 		</section>
 
-		<footer id="footer" class="py-5 text-white">
+		<!-- footer -->
+		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
 					<ul>
@@ -224,6 +225,9 @@
 						<li>
 							<a href="#">Cơ hội nghề nghiệp</a>
 						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -239,6 +243,12 @@
 						<li>
 							<a href="#">Chương trình đại lý</a>
 						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -250,6 +260,9 @@
 						</li>
 						<li>
 							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
 						</li>
 						<li>
 							<a href="#">Quyền riêng tư </a>
@@ -285,7 +298,7 @@
 					</ul>
 				</div>
 			</div>
-			<p class="copy-right text-center my-1">
+			<p class="copy-right text-center my-4">
 				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
 			</p>
 		</footer>
