--- a/endow_details.html
+++ b/endow_details.html
@@ -72,7 +72,7 @@
 							>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"
+							<a href="signup.html" target="_blank"
 								><i class="fas fa-user-plus"></i> Đăng ký</a
 							>
 						</li>
@@ -191,7 +191,8 @@
 			</div>
 		</section>
 
-		<footer id="footer" class="py-5 text-white">
+	<!-- footer -->
+		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
 					<ul>
@@ -231,6 +232,9 @@
 						<li>
 							<a href="#">Cơ hội nghề nghiệp</a>
 						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -246,6 +250,12 @@
 						<li>
 							<a href="#">Chương trình đại lý</a>
 						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -257,6 +267,9 @@
 						</li>
 						<li>
 							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
 						</li>
 						<li>
 							<a href="#">Quyền riêng tư </a>
@@ -292,11 +305,10 @@
 					</ul>
 				</div>
 			</div>
-			<p class="copy-right text-center my-1">
+			<p class="copy-right text-center my-4">
 				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
 			</p>
 		</footer>
-
 		<script src="./js/main.js"></script>
 	</body>
 </html>
