--- a/payment1.html
+++ b/payment1.html
@@ -286,109 +286,124 @@
     </div>
   </section>
 
-  <footer id="footer" class="py-5 text-white">
-    <div class="group-items">
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo"><i class="fas fa-layer-group"></i> MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <p href="#">
-              Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
-            </p>
-          </li>
-          <li>
-            <a href="#">Tel: (84-4) 3555.8999</a>
-          </li>
-          <li>
-            <a href="#">Email: contact@idji.vn</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5 class="main-nav-logo">
-              <a href="index.html" id="logo">Về MANDALA INN</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Về chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Hợp tác cùng chúng tôi </a>
-          </li>
-          <li>
-            <a href="#">Cơ hội nghề nghiệp</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐỐI TÁC</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Đối tác thanh toán </a>
-          </li>
-          <li>
-            <a href="#">Chương trình đại lý</a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
-            </h5>
-          </li>
-          <li>
-            <a href="#">Điều khoản sử dụng </a>
-          </li>
-          <li>
-            <a href="#">Quyền riêng tư </a>
-          </li>
-          <li>
-            <a href="#">Chính sách bảo mật </a>
-          </li>
-        </ul>
-      </div>
-      <div class="item">
-        <ul>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-apps">
-            <a href="#"><i class="fas fa-qrcode"></i></a>
-            <a href="#"><i class="fab fa-apple"></i></a>
-            <a href="#"><i class="fab fa-google-play"></i></a>
-          </li>
-          <li>
-            <h5>
-              <a href="index.html" id="logo">Kết nối với chúng tôi</a>
-            </h5>
-          </li>
-          <li class="footer-group-icon-socials">
-            <a href="#"><i class="fab fa-facebook"></i> </a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"> <i class="fab fa-twitter"></i></a>
-            <a href="#"> <i class="far fa-envelope"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <p class="copy-right text-center my-1">
-      Copyright &copy; 2020 by Mandalla.vn . All rights reserved
-    </p>
-  </footer>
+  <!-- footer -->
+		<footer id="footer" class="py-5">
+			<div class="group-items">
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo"
+									><i class="fas fa-layer-group"></i> MANDALA INN</a
+								>
+							</h5>
+						</li>
+						<li>
+							<p href="#">
+								Tầng 3 Grand Plza, 117 Trần Duy Hưng,Cầu Giấy, Hà Nội
+							</p>
+						</li>
+						<li>
+							<a href="#">Tel: (84-4) 3555.8999</a>
+						</li>
+						<li>
+							<a href="#">Email: contact@idji.vn</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5 class="main-nav-logo">
+								<a href="index.html" id="logo">Về MANDALA INN</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Về chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Hợp tác cùng chúng tôi </a>
+						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐỐI TÁC</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Đối tác thanh toán </a>
+						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">ĐIỀU KHOẢN SỬ DỤNG</a>
+							</h5>
+						</li>
+						<li>
+							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
+						</li>
+						<li>
+							<a href="#">Chính sách bảo mật </a>
+						</li>
+					</ul>
+				</div>
+				<div class="item">
+					<ul>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">TẢI ỨNG DỤNG MANDALA INN</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-apps">
+							<a href="#"><i class="fas fa-qrcode"></i></a>
+							<a href="#"><i class="fab fa-apple"></i></a>
+							<a href="#"><i class="fab fa-google-play"></i></a>
+						</li>
+						<li>
+							<h5>
+								<a href="index.html" id="logo">Kết nối với chúng tôi</a>
+							</h5>
+						</li>
+						<li class="footer-group-icon-socials">
+							<a href="#"><i class="fab fa-facebook"></i> </a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"> <i class="fab fa-twitter"></i></a>
+							<a href="#"> <i class="far fa-envelope"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<p class="copy-right text-center my-4">
+				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
+			</p>
+		</footer>
 
   <script src="./js/main.js"></script>
 </body>
