--- a/search.html
+++ b/search.html
@@ -73,7 +73,7 @@
 							>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"
+							<a href="signup.html" target="_blank"
 								><i class="fas fa-user-plus"></i> Đăng ký</a
 							>
 						</li>
@@ -1225,8 +1225,8 @@
 				</div>
 			</div>
 		</section>
-
-		<footer id="footer" class="py-5 text-white">
+<!-- footer -->
+		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
 					<ul>
@@ -1266,6 +1266,9 @@
 						<li>
 							<a href="#">Cơ hội nghề nghiệp</a>
 						</li>
+						<li>
+							<a href="#">Cơ hội nghề nghiệp</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -1281,6 +1284,12 @@
 						<li>
 							<a href="#">Chương trình đại lý</a>
 						</li>
+						<li>
+							<a href="#">Chương trình đại lý</a>
+						</li>
+						<li>
+							<a href="#">Chương trình hợp tác</a>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
@@ -1292,6 +1301,9 @@
 						</li>
 						<li>
 							<a href="#">Điều khoản sử dụng </a>
+						</li>
+						<li>
+							<a href="#">Quyền riêng tư </a>
 						</li>
 						<li>
 							<a href="#">Quyền riêng tư </a>
@@ -1327,8 +1339,8 @@
 					</ul>
 				</div>
 			</div>
-			<p class="copy-right text-center my-1">
-				Copyright &copy; 2020 by mandala.vn . All rights reserved
+			<p class="copy-right text-center my-4">
+				Copyright &copy; 2020 by Mandalla.vn . All rights reserved
 			</p>
 		</footer>
 
