--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							>
 						</li>
 						<li>
-							<a href="index.html" target="_blank"
+							<a href="signup.html" target="_blank"
 								><i class="fas fa-user-plus"></i> Đăng ký</a
 							>
 						</li>
@@ -435,7 +435,7 @@
 				</div>
 			</div>
 		</section>
-<!-- footer -->
+		<!-- footer -->
 		<footer id="footer" class="py-5">
 			<div class="group-items">
 				<div class="item">
